name:                hs-deps
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/msrdic/hs-deps#readme
license:             BSD3
license-file:        LICENSE
author:              Mladen Srdic
maintainer:          m.s.qubits@gmail.com
copyright:           2020 Mladen Srdic
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hs-deps
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , strict
                     , pretty-simple
                     , directory

test-suite integration
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck